# goz

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/goz-cli/: Cargo.toml
crates/goz-cli/src/: client.rs  main.rs
crates/goz-cli/tests/: cli.rs
crates/goz-core/: Cargo.toml
crates/goz-core/benches/: compact.rs  query.rs
crates/goz-core/src/: fold.rs  lib.rs  types.rs  wtf8.rs
crates/goz-core/src/escompat/: argv.rs  mod.rs
crates/goz-core/src/index/: mod.rs  store.rs  tests.rs  volume.rs
crates/goz-core/src/layout/: fixtures.rs  mod.rs  parse.rs
crates/goz-core/src/output/: csv.rs  filetime.rs  mod.rs
crates/goz-core/src/proto/: binary.rs  frame.rs  mod.rs  types.rs
crates/goz-core/src/query/: engine.rs  mod.rs  parse.rs
crates/goz-core/src/usn/: cursor.rs  fixtures.rs  mod.rs  ops.rs  record.rs
crates/goz-core/tests/: interned_names.rs
crates/goz-daemon/: Cargo.toml
crates/goz-daemon/examples/: memsim.rs
crates/goz-daemon/src/: bootstrap.rs  main.rs  run.rs  server.rs  service.rs  tail.rs  volume_state.rs
crates/goz-winfs/: Cargo.toml
crates/goz-winfs/src/: cancel_io.rs  elevation.rs  error.rs  file_layout.rs  file_stat.rs  ioctl.rs  journal.rs  lib.rs  links.rs  pipe_sd.rs  pipe_trust.rs  util.rs  volume.rs  working_set.rs
docs/: BENCHMARKS.md  DESIGN.md  SECURITY.md
